--- a/to-be-deleted.Rmd
+++ b/to-be-deleted.Rmd
@@ -73,6 +73,289 @@ knitr::opts_chunk$set(
 )
 ```
 
+# Introduction
+
+<!--- scRNA-seq and the different types of heterogeneity ---> 
+<!--- Nils to revisit and add additional references if required --->
+Single-cell RNA-sequencing (scRNA-seq) enables the study of genome-wide 
+transcriptional heterogeneity in cell populations that remains otherwise 
+undetected in bulk experiments [@Stegle2015; @Prakadan2017; @Patange2018]. 
+<!--- Applications of scRNA-seq range from characterising cell types in immunity 
+[@Lonnberg2017;  @Villani2017; @Zheng2017] and development [@Ibarra-Soria2018; 
+@Wagner2018; @Pijuan-Sala2019] to dissecting the mechanisms for cell fate 
+commitment [@Goolam2016; @Ohnishi2014]. ---> 
+On the broadest level, this heterogeneity can reflect the presence of distinct 
+cell subtypes or states. <!---, which could be characterised through 
+clustering [@Kiselev2019]. --->
+Alternatively, cell-to-cell expression heterogeneity can be due to gradual 
+changes along processes that evolve over time, such as development and differentiation. <!--- and that can be characterised 
+using pseudotime inference methods [@Saelens2019]. --->
+Several clustering and pseudotime inference methods have been developed to
+characterise these sources of heterogeneity [@Kiselev2019; @Saelens2019].
+However, there is a limited availability of computational tools tailored 
+to study more subtle variability within a seemingly homogeneous cell population. 
+This variability can be due to deterministic or stochastic events that regulate gene expression and, among others, has been reported to increase prior to cell phate decisions [@Mojtahedi2016] as well as throughout ageing [@Martinez-jimenez2017]. 
+
+<!--- Describes aims for the workflow and introduces BASiCS ---> 
+This article complements existing scRNA-seq workflows based on the
+Bioconductor package ecosystem (e.g. [@Lun2016; @Kim2019]). 
+We describe a step-by-step analysis which uses `r Biocpkg("scater")` and 
+`r Biocpkg("scran")` to perform quality control as well as 
+initial exploratory analyses [@McCarthy2017; @Lun2016]. 
+To robustly quantify transcriptional variability within and
+between pre-specified cell populations (such as experimental conditions or
+cell types) we use `r Biocpkg("BASiCS")` [@Vallejos2015; @Vallejos2016;
+@Eling2017] --- a Bayesian hierarchical framework that simultaneously performs 
+data normalisation (global scaling), technical noise quantification and selected 
+downstream analyses, whilst propagating statistical uncertainty across these 
+steps. Among others, `r Biocpkg("BASiCS")`, has led to new insights about the 
+heterogeneity of immune cells [@Martinez-jimenez2017].
+
+<!--- BASiCS downstream analyses within a single population --->
+Within a population of cells, `r Biocpkg("BASiCS")` decomposes the total 
+observed variability in expression measurements into technical and biological components [@Vallejos2015]. 
+This enables the identification of *highly variable genes* (HVGs) that capture
+the major sources of heterogeneity within the analysed cells [@Brennecke2013]. 
+HVG detection is often used as feature selection, to identify the input 
+set of genes for subsequent analyses. 
+`r Biocpkg("BASiCS")` can also highlight *lowly variable genes* (LVGs) that 
+exhibit stable expression across the population of cells.
+These may relate to essential cellular functions and can assist the development
+of new data normalisation or integration strategies [@Lin2019]. 
+
+<!--- BASiCS downstream analyses between populations --->
+In order to compare expression patterns between two or more pre-specified 
+groups of cells, `r Biocpkg("BASiCS")` provides a probabilistic decision rule to 
+perform differential expression analyses [@Vallejos2016; @Eling2018].
+Whilst several differential expression tools have been proposed for scRNA-seq 
+data (e.g. [@Kharchenko2014; @Finak2015]), some evidence suggests that 
+these do not generally outperform popular bulk RNA-seq tools [@Soneson2018]. 
+Moreover, most of these methods are only designed to uncover changes in overall
+expression, ignoring the more complex patterns that can arise at the single cell 
+level [@Lahnemann2020]. 
+Instead, `r Biocpkg("BASiCS")` embraces the high granularity of scRNA-seq data,
+uncovering changes in cell-to-cell expression variability that are not 
+confounded by differences in technical noise or in overall expression. 
+
+<!--- TBC description of BASiCS downstream analysis, with focus on differential --->
+<!--- add brief description for LVG/HVG 
+<!--- Differential analyses ---> 
+<!--- add reference to 11 challenges paper, flexible changes in expression ---> 
+<!-- DE testing isn't always between (2) conditions (blocking, continuous, etc) -->
+<!--- Since the era of RNA sequencing, methods for differential expression testing 
+of transcript counts across conditions have been developed 
+[@Anders2010; @Robinson2009]. 
+Due to high technical variability and sparsity in scRNA-seq data, new 
+approaches were developed for differential expression testing 
+for scRNA-seq data [@Katayama2013; @Kharchenko2014; @Delmans2016]. 
+In contrast to bulk samples, scRNA-seq measures variations in gene expression 
+across a population of cells, and can therefore be used to test for changes in 
+expression variability between two conditions. 
+To do this, `BASiCS` compares the gene-specific over-dispersion parameters 
+between two conditions. These parameters are independent of technical noise 
+and can be used as proxy for biological variability [@Vallejos2016]. 
+Similar to the mean-variability trend observed for normalised scRNA-seq data 
+[@Brennecke2013], the estimates for over-dispersion parameters decrease with 
+mean expression [@Vallejos2016].
+To correct for this, BASiCS has been extended to model the mean-variability 
+relationship and capture residual over-dispersion estimates that show no 
+association to mean expression. 
+Therefore, this extension allows to test changes in mean expression in parallel 
+to changes in variability [@Eling2018].  ---> 
+<!--- TBC Outline - wider use of bioc libraries + case studies ---> 
+<!---
+Two case studies exemplify the use of `BASiCS` for non-UMI and UMI 
+scRNA-seq data. In the first case, `BASiCS` can be used to detect highly and 
+lowly variable genes and to obtain robust, gene-specific estimates to assess
+biological variability in naive CD4^+^ T cells 
+[@Martinez-jimenez2017]; for a similar workflow see [@Kim2019].
+Furthermore, we compare naive to activated CD4^+^ T cells to highlight the use 
+of `BASiCS` to test for changes in mean expression and expression variability.
+In the second case, we use droplet-based scRNA-seq data to detect more subtle 
+transcriptional changes during embryonic somitogenesis [@Ibarra-Soria2018].
+--->
+
+<!--- Brief outline + reproducibility ---> 
+In this manuscript, we briefly discuss the sources of variability that arise in 
+scRNA-seq data and some of the strategies that have been designed to control or 
+attenuate technical noise in these assays. 
+We also summarise the main features of the Bioconductor packages that are used
+throughout this workflow and provide a description for the underlying statistical 
+model implemented in `r Biocpkg("BASiCS")`.
+This includes practical guidance to assess the convergence of the Markov Chain 
+Monte Carlo (MCMC) algorithm that is used to infer model parameters as well as 
+recommendations to interpret and to post-process the model outputs. 
+Finally, we provide two step-by-step case studies using naive CD4^+^ T cells 
+[@Martinez-jimenez2017] and samples collected during embryonic somitogenesis 
+[@Ibarra-Soria2018]. These examples were chosen to illustate the usage of 
+`r Biocpkg("BASiCS")` in the context of different scRNA-seq protocols. 
+
+All source code used to generate the results presented in this article is 
+available at https://github.com/VallejosGroup/BASiCSWorkflow. To ensure the 
+reproducibility of this workflow, the analysis environment and all software 
+dependencies are provided as a Docker [@Boettiger2014] image at: [ADD LINK].
+
+<!---
+In particular, 
+the `r Biocpkg("BASiCS")` Bioconductor package implements a Bayesian 
+hierarchical framework that propagates statistical 
+uncerstainty into down-stream analyses, and allows the decomposition of total 
+variance into biological and technical components by incorporating spike-in 
+reads [@Vallejos2015]. Furthermore, `BASiCS` has been extended to perform 
+differential mean expression and differential variability testing 
+[@Vallejos2016].
+
+package estimates gene- and cell-specific model parameters that can be used to, 
+for example, normalise raw scRNA-seq counts and to detect highly and lowly 
+variable genes [@Vallejos2015BASiCS]. 
+`BASiCS` is a hierarchical Bayesian framework that propagates statistical 
+uncerstainty into down-stream analyses, and allows the decomposition of total 
+variance into biological and technical components by incorporating spike-in 
+reads [@Vallejos2015]. Furthermore, `BASiCS` has been extended to perform 
+differential mean expression and differential variability testing 
+[@Vallejos2016].
+--->
+\newpage
+
+<!--- 
+
+## Outline
+
+This article is organised as follows:
+
+1. [Transcriptional noise](#noise-in-scRNA-seq-datasets): [TBC - summary about transcriptional noise]
+
+2. [Methods](#methods): We describe the main Bioconductor packages used in 
+  this worflow and introduce the different settings implemented in the 
+  `r Biocpkg("BASiCS")` Bioconductor package. 
+  
+3. [Reproducibility](#reproducibility): [DESCRIBE COMP REQUIREMENTS, DOCKER, 
+ETC --- CREATE SECTION IN MANUSCRIPT!]
+
+4. [C1 Fluidigm data](#Tcells): We present an end-to-end analysis workflow to 
+  obtain, process, quality filter raw expression counts of CD4^+^ T cells and how to 
+  perform analysis using `r Biocpkg("BASiCS")`. 
+  This section is sub-divided into a [single group case](#Tcells-single), 
+  where `BASiCS` is used to normalise data and to detect highly and lowly 
+  variable genes, and a [two group case](#Tcells-two), for which we perform 
+  differential mean expression and differential variability testing.
+
+5. [10X Genomics data](#droplet-data): We highlight the use of `BASiCS` for 
+  scRNA-seq data that do not contain technical spike-in transcript. 
+  In this case, technical noise is estimated via experimental replication.
+  Similar to the CD4^+^ T cells case, we perform differential mean expression 
+  and differential variability testing to detect early cell fate decision events 
+  in mammalian somitogenesis. 
+  
+---> 
+
+## Sources of variability in scRNA-seq datasets
+
+<!--- text to be revisited ---> 
+An overarching goal of scRNA-seq experiments is to characterise gene expression 
+heterogeneity with cellular resolution. 
+The focus of this article is to quantify the strength of this heterogeneity 
+within seemingly homogeneous cell populations. 
+Here, we briefly describe the underlying sources of heterogeneity that can be 
+captured by cell-to-cell variability estimates derived from scRNA-seq data. 
+
+Stochastic variability within a population of cells is often referred to as
+transcriptional *noise* and can arise from intrinsic and extrinsic sources
+[@Elowitz2002; @Eling2019]. 
+Classically, extrinsic noise is defined as stochastic fluctuations in cellular 
+components induced by cells residing in different dynamic states (e.g. cell 
+size, cell cycle, metabolism, intra- and inter-cellular signalling) 
+[@Zopf2013; @Iwamoto2016; @Kiviet2014]. 
+In contrast, intrinsic noise arises from stochastic effects on biochemical 
+processes such as transcription and translation [@Elowitz2002].
+Intrinsic noise can be modulated by genetic and epigenetic modifications (such 
+as mutations, histone modifications, CpG island length and nucleosome 
+positioning) [@Eberwine2015; @Faure2017; @Morgan2018] and is usually measured 
+at the level of individual genes [@Elowitz2002]. 
+Cell-to-cell gene expression variability estimates derived from scRNA-seq data 
+capture a combination of these effects, as well as deterministic regulatory 
+mechanisms [@Eling2019]. 
+Moreover, these variability estimates can also be inflated by the technical 
+noise that is typically observed in scRNA-seq assays [@Brennecke2013].
+
+<!--- Experimental strategies to tackle technical noise --->
+Different strategies have been incorporated into scRNA-seq protocols to control 
+or attenuate technical noise. 
+For example, external RNA spike-in molecules (such as the set introduced by the 
+External RNA Controls Consortium, ERCC [@Rna2005]) can be added to each cell’s 
+lysate in a (theoretically) known fixed quantity.
+Spike-ins can assist quality control steps [@McCarthy2017], data normalisation
+[@Vallejos2017] and can be used to infer technical noise [@Brennecke2013].
+Another strategy is to tag individual cDNA molecules using unique molecular 
+identifiers (UMIs) before PCR amplification [@Islam2014]. 
+Reads that contain the same UMI can be collapsed into a single molecule count,
+attenuating technical variability associated to cell-to-cell differences
+in amplification and sequencing depth (these technical biases are not fully 
+removed unless sequencing to saturation [@Vallejos2017]). 
+However, despite the benefits associated to the use of spike-ins and UMIs, 
+these are not available for all scRNA-seq protocols [@Haque2017]. 
+
+# Methods {#methods}
+
+This step-by-step scRNA-seq analysis workflow is primarily based on the 
+Bioconductor package ecosystem [@Amezquita2019]. 
+A graphical overview for the workflow is provided in Figure \@ref(fig:overview) 
+and its main components are described below. 
+
+```{r overview, out.width='50%', fig.cap = 'Graphical overview for the scRNA-seq analysis workflow described in this manuscript. Starting from a SingleCellExperiment object, we use the scater and scran Bioconductor packages to perform quality control and initial exploratory analyses. The primary focus of this workflow is to robustly quantify transcriptional heterogeneity within seemingly homogeneous cell populations. For this purpose, we apply the BASiCS Bioconductor package, illustrating how BASiCS can be used to analyse a single or multiple pre-specified groups of cells.', echo=FALSE, fig.pos='h'}
+knitr::include_graphics("figure/Overview.png")
+```
+
+## Input data - `SingleCellExperiment`
+
+Here, we use the `r Biocpkg("SingleCellExperiment")` package to convert an input 
+matrix of raw read-counts (molecule counts for UMI-based protocols) into a 
+`SingleCellExperiment` object.
+Such object can be used to store scRNA-seq data and its associated metadata, 
+such as gene- and cell-specific information. 
+Moreover, when available, the same object can be used to store read-counts for 
+technical spike-in molecules (these can be accessed via the `altExp()` method).
+A major advantage of using a `SingleCellExperiment` object as the input for 
+scRNA-seq analyses is that it enables interoperability across a large number of 
+Bioconductor packages [@Amezquita2019]. 
+
+## Quality control and exploratory analyses - `scater` and `scran`
+
+An critical step in scRNA-seq analyses is to apply quality control (QC) 
+diagnostics, removing low quality samples (wells or droplets, depending on 
+the protocol) that may distort downstream analyses. 
+Among others, QC can help to identify samples that contain broken cells, that 
+are empty or that contain multiple cells [@Ilicic2016classification]. 
+Moreover, lowly expressed genes for which less reliable information is 
+available are typically also removed. 
+To perform QC of scRNA-seq data, we use the `r Biocpkg("scater")` Bioconductor 
+package [@McCarthy2017].
+In `r Biocpkg("scater")`, the `calculateQCMetrics` function can be used to 
+calculate standard QC metrics for each cell (e.g. percentage of mitochondrial 
+reads) and gene (e.g. percentage of zeroes across all cells). 
+The package also provides a suite of visualisation tools that can be used to 
+explore the data under study and its associated QC diagnostic metrics. 
+
+The `r Biocpkg("scran")` package offers additional tools for QC 
+diagnostics and a variety of functions scRNA-seq data analysis [@Lun2016].
+In particular, it can perform *global scaling* data normalisation, calculating 
+cell-specific scaling factors that capture global differences in read-counts 
+across cells (e.g. due to variability in sequencing depth and PCR amplification) 
+[@Lun2016pooling].
+In `r Biocpkg("scran")`, users can also explore how the observed variability in
+gene expression counts can be decomposed into technical and biological 
+components (see the `decomposeVar` function). 
+Moreover, the `trendVar` function can be used to infer an overall trend between 
+gene-specific mean and variance estimates. 
+To derive gene-specific variability estimates that are not confounded by this 
+overall trend, the `DM` function calculates the distance between gene-specific 
+squared coefficients of variation (CV$^2$) and a rolling median along the range
+of mean expression values [@Kolodziejczyk2015cell].
+DM variability estimates enable exploratory analyses of cell-to-cell 
+heterogeneity, but a measure of uncertainty is not readily available. 
+As such, gene-specific downstream inference (such as differential variability 
+testing) is precluded.
+
 <!-- I simplified this section to avoid too much mathematical formulation.
 Readers can go to the original papers for more details.
 I think it is important to emphasise the intution/interpretation instead. -->
@@ -90,7 +373,7 @@ statistical uncertainty.
 To quantify technical noise, the original implementation of 
 `r Biocpkg("BASiCS")` uses information from extrinsic spike-in molecules as 
 control features, but the model has been extended to address situations in which 
-spike-ins are not available [@Eling2018]. 
+spike-ins are not available [@Eling2018].
 
 `r Biocpkg("BASiCS")` summarises the distribution of gene expression through 
 gene-specific *mean* ($\mu_i$) and *over-dispersion* ($\delta_i$) parameters. 
@@ -161,26 +444,4 @@ effective sample size generated by the MCMC samplers.
 [talk about downstream analyses; hvg/lvg; differential testing 
 then mention the ability to perform differential testing;
 finally the extention to account for mean/over-dispersion]
-
-## Other steps [title tbc]
-
-The `r Biocpkg("goseq")` Bioconductor package offers functions to detect the 
-enrichment of gene ontologies (GOs) among user-specified gene sets [@Young2010].
-Furthermore, `goseq` corrects for gene length biases, which is useful for full 
-length scRNA-seq data as highlighted in the first section. 
-In this workflow, we will use `goseq` to detect GO enrichment among 
-differentially expressed sets of genes.
-
-For downstream analysis, such as GO enrichment analysis or the biological 
-interpretation of individual genes, we need to (i) link each gene's ID to its 
-symbol and (ii) calculate each gene's length.
-For the first task, the `r Biocpkg("biomaRt")` Bioconductor package annotates a 
-wide range of gene and gene product identifiers [@Durinck2005] by accessing the 
-BioMart software suite ([http://www.biomart.org](http://www.biomart.org)).
-We can use `biomaRt` to link the **Mus musculus** gene IDs and to their gene 
-symbols (also referred to as 'gene name'): 
-
-
-
-
 
