--- a/to-be-deleted.Rmd
+++ b/to-be-deleted.Rmd
@@ -100,7 +100,7 @@ This variability can be due to deterministic or stochastic events that regulate 
 This article complements existing scRNA-seq workflows based on the
 Bioconductor package ecosystem (e.g. [@Lun2016; @Kim2019]). 
 We describe a step-by-step analysis which uses `r Biocpkg("scater")` and 
-`r Biocpkg("scran")` to perform quality control as well as 
+`r Biocpkg("scran")` to perform quality control (QC) as well as 
 initial exploratory analyses [@McCarthy2017; @Lun2016]. 
 To robustly quantify transcriptional variability within and
 between pre-specified cell populations (such as experimental conditions or
@@ -195,27 +195,6 @@ available at https://github.com/VallejosGroup/BASiCSWorkflow. To ensure the
 reproducibility of this workflow, the analysis environment and all software 
 dependencies are provided as a Docker [@Boettiger2014] image at: [ADD LINK].
 
-<!---
-In particular, 
-the `r Biocpkg("BASiCS")` Bioconductor package implements a Bayesian 
-hierarchical framework that propagates statistical 
-uncerstainty into down-stream analyses, and allows the decomposition of total 
-variance into biological and technical components by incorporating spike-in 
-reads [@Vallejos2015]. Furthermore, `BASiCS` has been extended to perform 
-differential mean expression and differential variability testing 
-[@Vallejos2016].
-
-package estimates gene- and cell-specific model parameters that can be used to, 
-for example, normalise raw scRNA-seq counts and to detect highly and lowly 
-variable genes [@Vallejos2015BASiCS]. 
-`BASiCS` is a hierarchical Bayesian framework that propagates statistical 
-uncerstainty into down-stream analyses, and allows the decomposition of total 
-variance into biological and technical components by incorporating spike-in 
-reads [@Vallejos2015]. Furthermore, `BASiCS` has been extended to perform 
-differential mean expression and differential variability testing 
-[@Vallejos2016].
---->
-\newpage
 
 <!--- 
 
@@ -252,31 +231,32 @@ ETC --- CREATE SECTION IN MANUSCRIPT!]
 ## Sources of variability in scRNA-seq datasets
 
 <!--- text to be revisited ---> 
-An overarching goal of scRNA-seq experiments is to characterise gene expression 
-heterogeneity with cellular resolution. 
-The focus of this article is to quantify the strength of this heterogeneity 
-within seemingly homogeneous cell populations. 
+<!--- An overarching goal of scRNA-seq is to characterise gene expression 
+heterogeneity with cellular resolution. ---> 
+The focus of this article is to use scRNA-seq data in order to quantify the
+strength of cell-to-cell expression heterogeneity within seemingly homogeneous 
+cell populations. 
 Here, we briefly describe the underlying sources of heterogeneity that can be 
 captured by cell-to-cell variability estimates derived from scRNA-seq data. 
 
-Stochastic variability within a population of cells is often referred to as
-transcriptional *noise* and can arise from intrinsic and extrinsic sources
+Stochastic variability within a cell population --- often referred to as
+transcriptional *noise* --- can arise from intrinsic and extrinsic sources
 [@Elowitz2002; @Eling2019]. 
-Classically, extrinsic noise is defined as stochastic fluctuations in cellular 
-components induced by cells residing in different dynamic states (e.g. cell 
-size, cell cycle, metabolism, intra- and inter-cellular signalling) 
+Classically, extrinsic noise is defined as stochastic fluctuations induced by 
+different dynamic cellular states (e.g. cell cycle, metabolism, intra- and
+inter-cellular signalling) 
 [@Zopf2013; @Iwamoto2016; @Kiviet2014]. 
 In contrast, intrinsic noise arises from stochastic effects on biochemical 
 processes such as transcription and translation [@Elowitz2002].
 Intrinsic noise can be modulated by genetic and epigenetic modifications (such 
 as mutations, histone modifications, CpG island length and nucleosome 
 positioning) [@Eberwine2015; @Faure2017; @Morgan2018] and is usually measured 
-at the level of individual genes [@Elowitz2002]. 
+at the gene level [@Elowitz2002]. 
 Cell-to-cell gene expression variability estimates derived from scRNA-seq data 
 capture a combination of these effects, as well as deterministic regulatory 
 mechanisms [@Eling2019]. 
 Moreover, these variability estimates can also be inflated by the technical 
-noise that is typically observed in scRNA-seq assays [@Brennecke2013].
+noise that is typically observed in scRNA-seq data [@Brennecke2013].
 
 <!--- Experimental strategies to tackle technical noise --->
 Different strategies have been incorporated into scRNA-seq protocols to control 
@@ -297,9 +277,9 @@ these are not available for all scRNA-seq protocols [@Haque2017].
 
 # Methods {#methods}
 
-This step-by-step scRNA-seq analysis workflow is primarily based on the 
-Bioconductor package ecosystem [@Amezquita2019]. 
-A graphical overview for the workflow is provided in Figure \@ref(fig:overview) 
+This step-by-step scRNA-seq workflow is primarily based on the Bioconductor 
+package ecosystem [@Amezquita2019]. 
+A graphical overview is provided in Figure \@ref(fig:overview) 
 and its main components are described below. 
 
 ```{r overview, out.width='50%', fig.cap = 'Graphical overview for the scRNA-seq analysis workflow described in this manuscript. Starting from a SingleCellExperiment object, we use the scater and scran Bioconductor packages to perform quality control and initial exploratory analyses. The primary focus of this workflow is to robustly quantify transcriptional heterogeneity within seemingly homogeneous cell populations. For this purpose, we apply the BASiCS Bioconductor package, illustrating how BASiCS can be used to analyse a single or multiple pre-specified groups of cells.', echo=FALSE, fig.pos='h'}
@@ -310,9 +290,7 @@ knitr::include_graphics("figure/Overview.png")
 
 Here, we use the `r Biocpkg("SingleCellExperiment")` package to convert an input 
 matrix of raw read-counts (molecule counts for UMI-based protocols) into a 
-`SingleCellExperiment` object.
-Such object can be used to store scRNA-seq data and its associated metadata, 
-such as gene- and cell-specific information. 
+`SingleCellExperiment` object which can store scRNA-seq data and its associated metadata, such as gene- and cell-specific information. 
 Moreover, when available, the same object can be used to store read-counts for 
 technical spike-in molecules (these can be accessed via the `altExp()` method).
 A major advantage of using a `SingleCellExperiment` object as the input for 
@@ -321,9 +299,9 @@ Bioconductor packages [@Amezquita2019].
 
 ## Quality control and exploratory analyses - `scater` and `scran`
 
-An critical step in scRNA-seq analyses is to apply quality control (QC) 
-diagnostics, removing low quality samples (wells or droplets, depending on 
-the protocol) that may distort downstream analyses. 
+An critical step in scRNA-seq analyses is to apply QC diagnostics, removing low
+quality samples (wells or droplets, depending on the protocol) that may distort
+downstream analyses. 
 Among others, QC can help to identify samples that contain broken cells, that 
 are empty or that contain multiple cells [@Ilicic2016classification]. 
 Moreover, lowly expressed genes for which less reliable information is 
@@ -338,44 +316,39 @@ explore the data under study and its associated QC diagnostic metrics.
 
 The `r Biocpkg("scran")` package offers additional tools for QC 
 diagnostics and a variety of functions scRNA-seq data analysis [@Lun2016].
-In particular, it can perform *global scaling* data normalisation, calculating 
-cell-specific scaling factors that capture global differences in read-counts 
-across cells (e.g. due to variability in sequencing depth and PCR amplification) 
-[@Lun2016pooling].
+It can perform *global scaling* data normalisation, calculating cell-specific scaling factors that capture global differences in read-counts across cells (e.g. due to sequencing depth and PCR amplification) [@Lun2016pooling].
 In `r Biocpkg("scran")`, users can also explore how the observed variability in
-gene expression counts can be decomposed into technical and biological 
-components (see the `decomposeVar` function). 
+expression counts can be decomposed into technical and biological 
+sources (see `decomposeVar`). 
 Moreover, the `trendVar` function can be used to infer an overall trend between 
 gene-specific mean and variance estimates. 
 To derive gene-specific variability estimates that are not confounded by this 
 overall trend, the `DM` function calculates the distance between gene-specific 
 squared coefficients of variation (CV$^2$) and a rolling median along the range
 of mean expression values [@Kolodziejczyk2015cell].
-DM variability estimates enable exploratory analyses of cell-to-cell 
-heterogeneity, but a measure of uncertainty is not readily available. 
-As such, gene-specific downstream inference (such as differential variability 
-testing) is precluded.
+DM estimates enable exploratory analyses of cell-to-cell heterogeneity, but a measure of uncertainty is not readily available. As such, gene-specific 
+downstream inference (e.g. differential variability testing) is precluded.
 
 <!-- I simplified this section to avoid too much mathematical formulation.
 Readers can go to the original papers for more details.
 I think it is important to emphasise the intution/interpretation instead. -->
-## Quantifying cell-to-cell transcriptional variability - `BASiCS`
+## Analysis of cell-to-cell transcriptional variability - `BASiCS`
 
-The `r Biocpkg("BASiCS")` package implements a Bayesian hierarchical framework 
+The `r Biocpkg("BASiCS")` package uses a Bayesian hierarchical framework 
 which borrows information across all genes and cells to robustly quantify 
 transcriptional variability [@Vallejos2015BASiCS].
 Similar to the approach adopted in `r Biocpkg("scran")`, `r Biocpkg("BASiCS")` 
 infers cell-specific global scaling normalisation parameters. 
 However, instead of inferring these as a pre-processing step, 
 `r Biocpkg("BASiCS")` uses an integrated approach in which data normalisation 
-and downstream analyses are performed simultaneously --- whilst propagating 
+and downstream analyses are performed simultaneously, thereby propagating
 statistical uncertainty. 
 To quantify technical noise, the original implementation of 
 `r Biocpkg("BASiCS")` uses information from extrinsic spike-in molecules as 
 control features, but the model has been extended to address situations in which 
 spike-ins are not available [@Eling2018].
 
-`r Biocpkg("BASiCS")` summarises the distribution of gene expression through 
+`r Biocpkg("BASiCS")` summarises expression patterns through 
 gene-specific *mean* ($\mu_i$) and *over-dispersion* ($\delta_i$) parameters. 
 Mean parameters $\mu_i$ quantify the overall expression for each gene $i$
 across the population of cells under study.
@@ -390,17 +363,16 @@ Similar to DM values implemented in `r Biocpkg("scran")`, these are defined as
 deviations with respect to an overall regression trend that captures the 
 relationship between mean and over-dispersion values.
 
-Parameter estimation is implemented in the `BASiCS_MCMC` function, which can be 
+Parameter estimates are obtained via the `BASiCS_MCMC` function, which can be 
 run using four different major settings (Table 1). 
-If spike-in molecules are available and `WithSpikes = TRUE` (default), the model 
-uses this information in order to infer technical noise.
-Alternatively, if `WithSpikes = FALSE`, the approach introduced in [@Eling2018]
-is applied.
-We recommend to use `Regression = TRUE` (default) as the underlying informative
-prior improves the stability of posterior estimates for small sample sizes and 
+`WithSpikes` indicates whether spike-in molecules are used to infer technical
+noise (default: `WithSpikes = TRUE`). 
+We recommend to use `Regression = TRUE` (default) as the underlying prior 
+improves the stability of posterior estimates for small sample sizes and 
 lowly expressed genes [@Eling2018]. 
-Moreover, it provides additional flexibility for downstream analysis as it also
-infers gene-specific residual over-dispersion parameters $\epsilon_i$. 
+Moreover, it provides additional flexibility for downstream analysis, inferring
+gene-specific residual over-dispersion parameters $\epsilon_i$ that are not 
+confounded by changes in mean expression.
 
 <!---
 If the regression between over-dispersion and mean expression should be 
@@ -420,10 +392,13 @@ No spike-ins available  `WithSpikes = FALSE`  `WithSpikes = FALSE`
 ----------------------- --------------------  -------------------
 
 <!-- Paragraph to be edited --->
-The algorithm implemented in the `BASiCS_MCMC` function is an adaptive 
-Metropolis within Gibbs sampler [@Roberts2009].
+An adaptive Metropolis within Gibbs sampler [@Roberts2009] algorithm is 
+implemented in `BASiCS_MCMC`. 
+The total number of iterations for the algorithm is indicated by `N`. 
 The `BASiCS_MCMC` function returns a `BASiCS_Chain` object, which can be used 
-for further downstream analyses, many of which are detailed in this workflow.
+for further downstream analyses.
+The output object contains 
+
 These objects contain draws from Markov chain Monte Carlo (MCMC) samplers,
 which are used to infer the posterior distribution over the model parameters
 [@Smith1993].
